--- a/03Textures/index.html
+++ b/03Textures/index.html
@@ -13,6 +13,11 @@
           <img id="wood" src="images/wood.jpg" />
           
       </a-assets>
+      <a-assets>
+        <img id="grass" src="images/grass.jpg"/>
+
+      </a-assets>
+
       <a-box id="myBox" 
         position="0 1 -3" 
         rotation="0 45 0" 
@@ -31,7 +36,9 @@
         width="100" 
         height="100" 
         color="#7BC8A4" 
-        shadow>
+        shadow
+        material="src:#grass">
+
       </a-plane> 
     </a-scene>
   </body>
