--- a/04Animation/index.html
+++ b/04Animation/index.html
@@ -26,7 +26,9 @@
                    to: 90 360 180; 
                    dur: 2000; 
                    easing: linear; 
-                   loop: true" >
+                   loop: true" 
+        color="#ffd0ff"
+        >
       </a-box>
       <a-box id="myOtherBox" 
         position="2 1 -3" 
@@ -35,7 +37,9 @@
         height="1" 
         depth="1" 
         material="src: #wood2"
-        shadow>  
+        shadow
+        color="#999950">
+
       </a-box>
       <a-plane id="ground"
         position="0 0 -4" 
@@ -44,7 +48,9 @@
         height="100" 
         color="#7BC8A4" 
         material="src: #grass; repeat: 10 10"
-        shadow>
+        shadow
+        color="#376939">
+
       </a-plane> 
     </a-scene>
   </body>
